# simtrack-data-generator

./: CMakeLists.txt
include/scene_rendering/: rendered_scene.h
include/tracker_interface/: track_single_object.h
scene_loading/: CMakeLists.txt
scene_loading/include/scene_loading/: rendered_scene.h
scene_loading/src/: rendered_scene.cpp
scene_rendering/: CMakeLists.txt
scene_rendering/include/scene_rendering/: rendered_scene.h
scene_rendering/src/: rendered_scene.cpp
scripts/: Untitled.ipynb  generated_scene_params.ipynb  obj_file_name.h5
scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: generate-AR-features.cpp  generate_training_data.cpp  render_example.cpp  rendered_scene.cpp  track_single_object.cpp  tracker_unit_test.cpp  write_query_points.cpp
tests/h5_param_parsing/: h5_param_parsing.cpp
tests/test_data/: obj_file_name.h5
visual_cue_processing/: CMakeLists.txt
visual_cue_processing/src/: kdtree_search.cpp  matrix_transform.cpp.cpp  pointcloud_viz.cpp  range_image.cpp
